--- a/0 Setting Up.ipynb
+++ b/0 Setting Up.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# U1L1 - Setting Up\n",
+    "# Setting Up\n",
     "---\n",
     "\n",
     "Easiest way to start coding in Python is to use a web service from [repl.it](https://repl.it)\n",
@@ -18,7 +18,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
